k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: brausensart
spec:
  selector:
    matchLabels:
      app: brausensart
  replicas: 1
  template:
    metadata:
      labels:
        app: brausensart
    spec:
      containers:
      - name: brausensart
        image: brausen42/brausensart:v1.1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
