k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: brausensart-ingress
  annotations:  
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-brausensart
spec:
  tls:
  - hosts:
    - brausensart.com
    - www.brausensart.com
    secretName: letsencrypt-brausensart
  rules:
  - host: brausensart.com
    http:
      paths:
      - backend:
          serviceName: brausensart
          servicePort: 80
  - host: www.brausensart.com
    http:
      paths:
      - backend:
          serviceName: brausensart
          servicePort: 80
